<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.6">
  <DUT Name="RobotInternalData" Id="{6cf4cb5f-ba59-4908-bcec-107d4aad80db}">
    <Declaration><![CDATA[TYPE RobotInternalData :
	STRUCT
		Robot_Number : INT;
		Robot_IP_WiFi     : T_AmsNetId;
		Robot_IP_Wire     : T_AmsNetId;
		Robot_Name     : STRING;
		Robot_Nickname : STRING;
	END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>