<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.6">
  <DUT Name="DUT_SysState" Id="{b4ee2f7b-a0dc-401b-b8e5-6cc650ab611d}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
{attribute 'strict'}
TYPE DUT_SysState :
(
	init:=0,
	preOp:=1,
	Op := 2,
	Error:=3
);
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>